<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Area"
        app:titleTextColor="@color/white"
        android:background="@color/blue"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_area_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_area_name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edt_area_name"
        android:hint="@string/hint_input_area_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_area_name"/>

    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="3dp"/>

        <Button
            android:id="@+id/btn_finish_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_finish_task"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>