<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Assignment"
        app:titleTextColor="@color/white"
        android:background="@color/blue"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_add_assignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/layout_area_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_add_assignment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:background="@drawable/bg_area_border"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_total_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#C9E2F6"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:contentPadding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_total_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_total_area"
                app:layout_constraintStart_toEndOf="@id/cv_total_area"
                app:layout_constraintTop_toTopOf="@id/cv_total_area" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/cv_total_area"
                app:layout_constraintStart_toStartOf="@+id/tv_total_area" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:background="@drawable/bg_area_border"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_total_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#C9E2F6"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:contentPadding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_map" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_total_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_total_points"
                app:layout_constraintStart_toEndOf="@id/cv_total_points"
                app:layout_constraintTop_toTopOf="@id/cv_total_points" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/cv_total_points"
                app:layout_constraintStart_toStartOf="@+id/tv_total_points" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_area_detail"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_footer"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/item_assignment" />

    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_edit_name"
            android:textColor="#2196F3"
            android:textAllCaps="false"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_border_dark_blue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_area_title" />

        <Button
            android:id="@+id/btn_finish_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_finish_task"
            android:textAllCaps="false"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>